# Cosmic-Connect

./: .gitignore  Cargo.toml  README.md  build-deps.list  generate-flatpak-manifest.py  install.sh  io.github.M4LC0ntent.CosmicConnect.base.json  justfile  package-deps.list
data/: io.github.M4LC0ntent.CosmicConnect.desktop  io.github.M4LC0ntent.CosmicConnectSMS.desktop  io.github.M4LC0ntent.CosmicConnectSettings.desktop
scripts/: check-deps.sh  disable_kde_notifications.sh  install-deps.sh  register-handler.sh  show_kde_notifications.sh
src/: cosmic-connect-sms.rs  dbus.rs  lib.rs  main.rs  messages.rs  models.rs  notifications.rs  plugin_config.rs  portal.rs  settings.rs
src/plugins/: mod.rs
src/plugins/sms/: app.rs  dbus.rs  emoji.rs  messages.rs  mod.rs  models.rs  utils.rs  views.rs
src/ui/: mod.rs  popup.rs
