[package]
name = "cosmic-connect-applet"
version = "0.1.0"
edition = "2021"

[lib]
name = "cosmic_connect_applet"
path = "src/lib.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "applet",
    "tokio",
    "wayland",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
zbus = "5.1"
futures = "0.3"
futures-util = "0.3"      # For portal signal stream processing
urlencoding = "2.1"       # For decoding file:// URIs from portal
serde_json = "1.0"
lazy_static = "1.5"  # For connection pooling and static channel
ctrlc = "3.4"        # For signal handling
async-stream = "0.3" # For subscription stream

[[bin]]
name = "cosmic-connect-applet"
path = "src/main.rs"

[[bin]]
name = "cosmic-connect-settings"
path = "src/settings.rs"

[[bin]]
name = "cosmic-connect-sms"
path = "src/cosmic-connect-sms.rs"